<resources>
    <string name="app_name">Cook it!</string>
    <string name="preferences_key">com.dangerducks.cookit.PREFERENCE_FILE_KEY</string>

    <string name="action_login">Log in</string>
    <string name="action_signin">Sign in</string>
    <string name="save_user">Save login data</string>

    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_credits">Credits</string>
    <string name="action_clear">Clear</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_remove">Remove recipe</string>

    <string name="cancel">Cancel</string>

    <string name="hint_usr">Username</string>
    <string name="hint_pass">Password</string>
    <string name="hint_email">E-mail</string>
    <string name="wrong_data">Wrong username/password</string>
    <string name="something_wrong">Something went wrong... Please verify your data and your internet conection</string>

    <string name="copyright">All rights reserved © Danger Ducks 2016</string>

    <string name="open_drawer">Menu</string>
    <string name="close_drawer">Close</string>
    <string name="configuration">Configuration</string>
    <string name="about">About</string>

    <string name="register_caption">Register a new user</string>
    <string name="pass_instructions">The password must not be longer than 25 characters</string>

    <string name="card">Card</string>
    <string name="no_recipes">You don\'t have any recipe. :(</string>
    <string name="dailyRecipe">Daily Recipe</string>

    <!-- Add recipe -->
    <string name="add_recipe_title">Add new recipe</string>
    <string name="recipe_name_caption">Recipe name</string>
    <string name="duration_caption">Duration</string>
    <string name="duration_hint">Start adding steps</string>
    <string name="calories_caption">Calories</string>
    <string name="portions_caption">Portions</string>
    <string name="category_caption">Category</string>
    <string name="steps_caption">Steps</string>

    <string name="add_step">Add step</string>
    <string name="remove_step">Remove step</string>
    <string name="empty_step">You can\'t enter an empty step...</string>
    <string name="empty_recipe">You\'re missing something...</string>
    <string name="empty_time">You have to tell me how much does it takes...</string>

    <string name="add_ingredient">Add ingredient</string>
    <string name="remove_ingredient">Remove</string>
    <string name="finish_add_ingredient">Done</string>
    <string name="step_duration_caption">Step duration:</string>
    <string name="in_minutes">in minutes</string>

    <string name="recipe_saved">The recipe was saved successfully</string>

    <!-- Add ingredient -->
    <string name="add_ingredient_title">Add new ingredient</string>
    <string name="ingredient_name_caption">Ingredient name</string>
    <string name="ingredient_calories_caption">Calories</string>
    <string name="ingredient_availability_caption">Available</string>
    <string name="add_ingredient_done">Done</string>

    <!-- Show recipe -->
    <string name="recipe_info">Information</string>

    <!-- Show step -->
    <string name="empty_step_description">This is an empty step description template</string>
    <string name="step_number">Step </string>
    <string name="ingredients">Ingredients</string>

    <!-- FAB labels -->
    <string name="fab_recipe">Recipe</string>
    <string name="fab_ingredient">Ingredient</string>

    <!-- Favourite -->
    <string name="fav">Added to favourites</string>
    <string name="unfav">Removed from favourites</string>
</resources>
