<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android1="http://schemas.android.com/apk/res/android">

    <item android1:id="@+id/action_save"
          android1:title="@string/action_save"
          android1:icon="@drawable/ic_done_white_24dp"
          app:showAsAction="ifRoom"/>

    <item android1:id="@+id/action_clear"
          android1:title="@string/action_clear"
          android1:icon="@drawable/ic_delete_white_24dp"
          app:showAsAction="ifRoom"/>

    <item android1:id="@+id/action_delete"
          android1:title="@string/action_delete"
          android1:icon="@drawable/ic_clear_white_24dp"
          app:showAsAction="ifRoom"/>

    <item android1:id="@+id/action_settings"
          android1:title="@string/action_settings"
          app:showAsAction="never"/>

    <item android1:id="@+id/action_credits"
          android1:title="@string/action_credits"
          app:showAsAction="never"/>

</menu>