<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="25dp"
              android:layout_marginBottom="5dp"
              android:background="@color/main_background">

    <TextView
        android:id="@+id/show_step_number"
        android:text="@string/step_number"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/show_step_done"
        android:layout_toLeftOf="@id/show_step_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/show_step_description"
        android:layout_below="@id/show_step_number"
        android:text="@string/empty_step_description"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/show_step_duration"
        android:layout_below="@id/show_step_description"
        android:text="@string/step_duration_caption"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/show_step_ingredients"
        android:layout_below="@id/show_step_duration"
        android:text="@string/ingredients"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/show_step_ingredient_container"
        android:layout_below="@+id/show_step_ingredients"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>

    <View
        android:layout_below="@id/show_step_ingredient_container"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</RelativeLayout>