<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_ingredient_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
            android:id="@+id/add_rel_layout"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <EditText
            android:id="@+id/ingredient_name"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:gravity="center"
            android:hint="@string/ingredient_name_caption"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



        <LinearLayout
            android:id="@+id/ingredient_captions"
            android:layout_below="@+id/ingredient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/ingredient_calories_caption"
                android:text="@string/ingredient_calories_caption"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/ingredient_availability_caption"
                android:text="@string/ingredient_availability_caption"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ingredient_information"
            android:layout_below="@+id/ingredient_captions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:weightSum="2">

            <EditText
                android:id="@+id/ingredient_calories"
                android:inputType="number"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/ingredient_availability"
                android:inputType="number"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        
        <Button
            android:id="@+id/add_ingredient_done"
            android:layout_below="@id/ingredient_information"
            android:text="@string/add_ingredient_done"
            style="?attr/borderlessButtonStyle"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </RelativeLayout>

</FrameLayout>