<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/show_drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
style="@style/AppTheme">
<!-- The main content view -->

<include
    android:id="@+id/show_toolbar"
    layout="@layout/toolbar"/>

<FrameLayout
    android:id="@+id/show_recipe_frame"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:padding="@dimen/activity_horizontal_margin"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@color/main_background">

        <TextView
            android:id="@+id/show_recipe_name"
            android:text="@string/recipe_name_caption"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.CardView
            android:id="@+id/show_recipe_detail"
            android:layout_below="@id/show_recipe_name"
            android:background="@color/cardview_light_background"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/show_duration"
                    android:text="@string/duration_caption"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/show_step_detail"
                    android:layout_below="@id/show_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/show_recipe_portions"
                        android:text="@string/portions_caption"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/show_recipe_calories"
                        android:text="@string/calories_caption"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_step_container"
            android:layout_below="@+id/show_recipe_detail"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</FrameLayout>

<!-- The navigation drawer -->

<android.support.design.widget.NavigationView
    android:id="@+id/show_drawer"
    android:layout_width="@dimen/drawer_width"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    app:headerLayout="@layout/header"
    app:menu="@menu/actions_drawer"/>

</android.support.v4.widget.DrawerLayout>
