<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme">

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>


        <!-- The main content view -->

        <LinearLayout
            android:id="@+id/main_content_frame"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@color/main_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/daily_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/dailyRecipe"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/daily_recipe_caption"
                        android:text="@string/dailyRecipe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/cardview_dark_background"/>

                    <TextView
                        android:id="@+id/card_header"
                        android:text="@string/recipe_name_caption"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/card_show_portions"
                        android:text="@string/portions_caption"
                        style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/card_recipe_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/activity_horizontal_margin"/>

        </LinearLayout>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_add_white_18dp"
            style="@style/AppTheme"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_restaurant_white_24dp"
                app:fab_label="@string/fab_recipe"
                app:fabSize="mini"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimaryDark"
                app:fab_colorRipple="@color/colorAccent"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_kitchen_white_24dp"
                app:fab_label="@string/fab_ingredient"
                app:fabSize="mini"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimaryDark"
                app:fab_colorRipple="@color/colorAccent"/>

        </com.github.clans.fab.FloatingActionMenu>

    </android.support.design.widget.CoordinatorLayout>

    <!-- The navigation drawer -->

    <android.support.design.widget.NavigationView
        android:id="@+id/main_drawer"
        android:layout_width="@dimen/drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header"
        app:menu="@menu/actions_drawer"/>

</android.support.v4.widget.DrawerLayout>